# rsyncr-backups

./: .gitignore  README.rst  example_global_config.toml  pyproject.toml  tests_needed.txt
example_configs/: example_global_config.toml  example_job_config.toml  example_machine_config.toml
rsyncr/: __init__.py  config.py  message.py  run.py
rsyncr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test1.toml  test_config.py  test_message.py  test_run.py
