[tool.poetry]
name = "rsyncr"
version = "0.1.2"
description = "Hackety thing to run rsync to backup files. Convenience/wrapper hacks."
authors = ["Matt Feifarek <matt.feifarek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
executor = "^21.3"
tomlkit = "^0.5.8"
telegram-send = "^0.24"

[tool.poetry.scripts]
rsyncr = 'rsyncr.run:cli'

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^19.3b0", allows-prereleases = true}
flake8 = "^3.7.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
